--- a/index.html
+++ b/index.html
@@ -10,16 +10,19 @@
     
     <div class="main">
         <form action="">
-            <h3>Login</h3>
+            <h3>Login Page</h3>
 
             <label for="name">Name</label>
             <input type="text" name="name" placeholder="Enter name">
 
-            <label for="email">Email</label>
+            <label for="email">Password</label>
             <input type="password" name="password" placeholder="Enter password">
 
+            
         </form>
+        <div class="a">
         <a href="#">Forget Password</a>
+    </div>
         <div class="submit">
         <input type="submit" name="" value="Login">
     </div>
